<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:background="@color/colorMainBackground"
        tools:context="ba.unsa.etf.rma.ajdin_jajcanin.spirala2.DodavanjeKnjigeFragment">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorBackground">
            <ImageView
                android:id="@+id/naslovnaStr"
                android:layout_width="140dp"
                android:layout_height="165dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/imageborder"/>


            <Button
                android:id="@+id/dNadjiSliku"
                android:layout_width="221dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:hint="@string/btnAddImage"
                android:background="@drawable/roundedbutton"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/imeAutora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/etAuthor"/>

            <EditText
                android:id="@+id/nazivKnjige"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/etBook"/>

            <Spinner
                android:id="@+id/sKategorijaKnjige"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

            <Button
                android:id="@+id/dUpisiKnjigu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btnAddBook"
                android:background="@drawable/roundedbutton"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/dPonisti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbutton"
                android:text="@string/btnCancel"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>