<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:background="@color/colorMainBackground"
        tools:context="ba.unsa.etf.rma.ajdin_jajcanin.spirala2.DodavanjeKnjigeFragment">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorBackground">

        <Spinner
            android:id="@+id/sKategorije"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/tekstUpit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/etQuery"
                android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/sRezultat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/dRun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/btnSearch"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/dAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/btnAddBook"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/dPovratak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/btnBack" />
    </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
